updated package.json to devDependencies. only includes references to node modules, not the entire modeules
Signed-off-by: Reda Hmeid <reda@hmeid.com>

--- a/serverless.yml
+++ b/serverless.yml
@@ -23,6 +23,8 @@ frameworkVersion: '3'
 provider:
   name: aws
   runtime: python3.8
+  stage: dev
+  region: eu-west-2
 
 # you can overwrite defaults here
 #  stage: dev
@@ -59,8 +61,8 @@ provider:
 #    - include-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
+  calc:
+    handler: handler.main
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
@@ -112,3 +114,9 @@ functions:
 #     NewOutput:
 #       Description: "Description for the output"
 #       Value: "Some output value"
+plugins:
+  - serverless-python-requirements
+ 
+custom:
+  pythonRequirements:
+    dockerizePip: non-linux
