added tests to check the api works
Signed-off-by: Reda Hmeid <reda@hmeid.com>

--- a/serverless.yml
+++ b/serverless.yml
@@ -120,3 +120,8 @@ plugins:
 custom:
   pythonRequirements:
     dockerizePip: non-linux
+
+package:
+  exclude:
+    - node_modules/**
+    - venv/**
