--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "serverless-offline": "^9.3.1",
+    "serverless-offline-python": "^3.22.3",
     "serverless-python-requirements": "^5.4.0"
+  },
+  "dependencies": {
+    "slspress": "^2.2.5"
   }
 }
