--- a/serverless.yml
+++ b/serverless.yml
@@ -65,6 +65,10 @@ functions:
     handler: handler.main
   full_calc:
     handler: handler.full_calculator_api
+    events:
+      - httpApi:
+        path: /full_calculator
+        method: post
   full_calc_head:
     handler: handler.full_calculator_head
 #    The following are a few example events you can configure
@@ -120,10 +124,15 @@ functions:
 #       Value: "Some output value"
 plugins:
   - serverless-python-requirements
+  - serverless-offline
  
 custom:
   pythonRequirements:
     dockerizePip: non-linux
+  serverless-offline:
+    httpsProtocol: "dev-certs"
+    httpPort: 4000
+    
 
 package:
   patterns:
