--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "serverless-offline": "^9.3.1"
   },
   "dependencies": {
+    "serverless-python-requirements": "^5.4.0",
     "slspress": "^2.2.5"
   }
 }
